crates/graphcal-eval/tests/snapshots/error_snapshots__error_expected_fail_bare_int_key.snap
---
source: crates/graphcal-eval/tests/error_snapshots.rs
expression: rendered
---
unexpected token `number`
    Diagnostic severity: error
Begin snippet for expected_fail_bare_int_key.gcl starting at line 2, column 1

snippet line 2: // written `#N`, matching table slice labels.
snippet line 3: #[expected_fail(1)]
    label at line 3, column 17: here
snippet line 4: assert r = for i: Fin(2) { to_int(i) == 0 };
diagnostic help: expected identifier
diagnostic code: graphcal::P001
