crates/graphcal-eval/tests/snapshots/error_snapshots__error_extern_arity.snap
---
source: crates/graphcal-eval/tests/error_snapshots.rs
expression: rendered
---
function `lerp` expects 3 argument(s), got 2
    Diagnostic severity: error
Begin snippet for extern_arity.gcl starting at line 4, column 1

snippet line 4: }
snippet line 5: node x: Dimensionless = demo::lerp(1.0, 2.0);
    label at line 5, columns 25 to 34: wrong number of arguments
diagnostic code: graphcal::N006
